<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.aisle.presenter.views.ui.notes.NotesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.aisle.presenter.views.ui.discover.DiscoverFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.aisle.presenter.views.ui.matches.MatchesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_matches" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.aisle.presenter.views.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>